# frontier

./: Cargo.toml  frontier.code-workspace
assets/: test_platform.glb  test_platform.gltf
src/: ecs_manager.rs  main.rs
src/wasm/: mod.rs  system.rs
src/world/: system.rs
