[package]
name = "frontier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.12.0", features = ["wayland", "trace"] }
bevy_oxr = "0.1.0"
expect-dialog = "1.0.1"
globals = "1.0.5"
gltf = "1.2.0"
native-dialog = "0.7.0"
wasmer = "4.2.3"
